# fun-dialogues

./: .gitignore  CONTRIBUTE.md  README.md  setup.cfg
.github/workflows/: python-publish.yml
benchmark_datasets/: README.md
benchmark_datasets/opengeoquery-v1/: README.md  opengeoquery_v1.csv  opengeoquery_v1.txt
dialogues/academia/: basketball_coach.csv  basketball_coach.json  physics_office_hours.csv  physics_office_hours.json
dialogues/customer_service/: apple_picker_maintenance.csv  apple_picker_maintenance.json  grocery_cashier.csv  grocery_cashier.json  robot_support.csv  robot_support.json
dialogues/healthcare/: minor_consultation.csv
dialogues/sports/: basketball_coach.csv
examples/dialoaders/: dialogue_loading.py
examples/judgyrag/: pdf_judgyrag.py  run.py
fun_dialogues/dialogues/customer_service/: grocery_cashier.csv
fun_dialogues/utils/: loader.py
fundialogues/: MANIFEST.in  README.md  __init__.py
fundialogues/dialogues/academia/: physics_office_hours.json
fundialogues/dialogues/healthcare/: minor_consultation.json
fundialogues/src/judgyrag/: benchgen.py
fundialogues/src/judgyrag/preproc/: judgypdf.py
fundialogues/src/judgyrag/utils/: generate.py  postproc.py
fundialogues/utils/: loaders.py
src/quickbot/: QuickBot.py
