[metadata]
name = fundialogues
version = 0.0.1
author = Eduardo Alvarez
author_email = eduand.alvarez@gmail.com
description = a package with fictitous dialogue datasets and tools to help learn how to build chatbots and do basic prototyping.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eduand-alvarez/fun_dialogues/tree/main
project_urls =
    Bug Tracker = https://github.com/eduand-alvarez/fun_dialogues/issues
classifiers =
    Programming Language :: Python :: 3
    License :: Apache 2.0
    Operating System :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8.10

[options.packages.find]
where = src